# 8bits-of-rust

./: .gitignore  Cargo.toml  DONE&TODO.md  README.md  tree.sh
.github/workflows/: build-frontend.yml
frontend/: package.json  vue.config.js
frontend/src/: App.vue  main.js  tree.txt
frontend/src/assets/: theme.css
frontend/src/components/Channels/: ChannelNames.vue  Channels.vue  Displays.vue  PatternManager.vue
frontend/src/components/Patterns/: Patterns.vue
frontend/src/components/PianoRoll/: PianoKeys.vue  PianoRoll.vue  Score.vue
frontend/src/components/PlayUnit/: PlayUnit.vue
frontend/src/components/Songs/: SongsForm.vue  SongsList.vue
frontend/src/components/channels/: ChannelNames.vue  Channels.vue  Displays.vue
frontend/src/components/common/: ColorGenerator.js  FlexContainer.vue  MyButton.vue  MyGrid.vue  MyInput.vue  MyKnob.vue  MyRadio.vue  MySelect.vue  MySlider.vue  MyTest.vue  MyText.vue  index.js
frontend/src/components/compose/: Arrangement.vue  Mixer.vue  (+3 more)
frontend/src/macro/: globalmacro.js
frontend/src/router/: index.js
frontend/src/store/: store.js
frontend/src/views/: BackgroundLayer.vue  Compose.vue  Developers.vue  NavigationBar.vue  Songs.vue  Start.vue
src/: lib.rs  main.rs  midi.rs
src/util/: basefn.rs  basemacro.rs  basetype.rs  channel.rs  mod.rs  song.rs  test.rs  web_wrapper.rs
src/util/effect/: effectfn.rs  mod.rs
src/util/parameter/: baseconst.rs  mod.rs
src/util/pattern/: display.rs  mod.rs  pattern.rs
src/util/synth/: mod.rs  synth.rs  synthparameters.rs  wavefn.rs
tree/: backend.txt  frontend.txt
(+19 files in other folders)
