[package]
name = "_8bits_of_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20.1"
hound = "3.4"
libm = "0.2.11" 
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.0" 
multimap = "0.10.0"
winapi = { version = "0.3", features = ["winuser"] }

[lib]
crate-type = ["cdylib", "rlib"]

# [profile.release]
# windows_subsystem = 'windows'
