[package]
name = "eight_bits_of_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.20.1"
hound = "3.4"
libm = "0.2.11" 
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.0" 
multimap = "0.10.0"
winapi = { version = "0.3", features = ["winuser"] }
wasm-bindgen = "0.2.100"
console_error_panic_hook = "0.1.7"

[lib]
crate-type = ["cdylib", "rlib"]

# [profile.release]
# windows_subsystem = 'windows'
